<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_documents"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/left_space"
    android:visibility="visible"
    android:background="@drawable/rectangular_white_background"
    app:cardCornerRadius="@dimen/eight_dp"
    app:cardElevation="@dimen/twenty_dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/Fifteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/header_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/gill_sans"
                    android:gravity="center"
                    android:text="@string/alert"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/twenty_dp" />

                <ImageView
                    android:id="@+id/close_documents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cancel"
                    android:padding="@dimen/left_space"
                    android:src="@drawable/cancel_black_icon" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_tm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/gill_sans"
                    android:text="@string/delete"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gill_sans"
                android:text="@string/select_head_of_the_practice"
                android:textColor="@color/Blue_text_color"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/group_head_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:background="@drawable/rectangle_grey_background"
                android:fontFamily="@font/gill_sans"
                android:padding="@dimen/small_size"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/person_image_email" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_No"
                    android:layout_width="@dimen/sixty_dp"
                    android:layout_height="@dimen/forty_dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:background="@drawable/yes_button_red_button"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_yes"
                    android:layout_width="@dimen/sixty_dp"
                    android:layout_height="@dimen/forty_dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/Fifty_dp"
                    android:background="@drawable/no_button_green_button"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.cardview.widget.CardView>