<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/left_space"
        android:paddingBottom="@dimen/twenty_five">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Blue_text_color"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/close_details"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_size"
                android:background="@drawable/cancel_white_icon"
                android:fontFamily="@font/gill_sans"
                android:padding="@dimen/small_size"
                android:textColor="@color/black"
                android:textSize="@dimen/Fifteen_dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/header_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_size"
                android:fontFamily="@font/gill_sans"
                android:gravity="center"
                android:padding="@dimen/small_size"
                android:text="@string/update_groups"
                android:textColor="@color/white"
                android:textSize="@dimen/Fifteen_dp"
                android:visibility="visible"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_tm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/left_space"
            android:textColorHint="@color/black"
            app:boxBackgroundMode="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_details_2"
            app:layout_constraintVertical_bias="0.0">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/left_space"
                android:layout_weight="1"
                android:background="@drawable/rectangle_light_grey_bg"
                android:drawableEnd="@drawable/search_groups"
                android:gravity="start"
                android:hint="@string/search_group" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/select_head_of_the_practice"
            android:textColor="@color/Blue_text_color"
            android:textSize="@dimen/twenty_dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_add_tag" />

        <include
            android:id="@+id/rv_group_update"
            layout="@layout/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_groups"
            android:layout_marginEnd="@dimen/left_space"
            android:visibility="visible" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_buttons_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_size"
            android:orientation="horizontal">

            <include
                android:id="@+id/btn_cancel_save"
                layout="@layout/cancel_button" />

            <include
                android:id="@+id/btn_create"
                layout="@layout/submit_button" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>



